Improved compatibility with standard WordPress install

--- a/4.9/debian/Makefile
+++ b/4.9/debian/Makefile
@@ -5,11 +5,11 @@ NAMESPACE = dockium
 # WordPress version
 VERSION = 4.9.1
 # Docker image revision
-REVISION = 1
+REVISION = 2
 
 # Build steps
 all: debian
 
 debian:
-	# tag: dockium/wordpress:4.9.1_0-alpine
+	# tag: dockium/wordpress:4.9.1_2
 	docker build -t $(NAMESPACE)/wordpress:$(VERSION)_$(REVISION) ./
