--- a/4.9/debian/test/docker-compose.yml
+++ b/4.9/debian/test/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '2'
 services:
-  mysql:
+  database:
     image: percona/percona-server:5.7
     environment:
       MYSQL_ROOT_PASSWORD: mysql
@@ -14,23 +14,22 @@ services:
     networks:
       - backend
   wordpress:
-    build: ../
+    image: pressmogul/wordpress:4.9.8
     environment:
-      WP_DB_HOST: mysql
+      WP_DB_HOST: database
       WP_DB_USER: wordpress
       WP_DB_PASSWORD: wordpress
       WP_DB_NAME: wordpress
       WP_DB_PORT: '3306'
       WP_TABLE_PREFIX: dc
       DISALLOW_FILE_EDIT: "false"
-      WP_CONTENT_CUSTOM: "/wordpress/wp-content"
     depends_on:
-      - mysql
+      - database
     mem_limit: 256m
     mem_reservation: 128m
     volumes:
-      - app:/var/www/app/wordpress
-      - ./wp-config-override.php:/var/www/app/wp-config-override.php
+      - app:/var/www/wordpress
+      - ./wp-config-override.php:/var/www/wordpress/wp-config-override.php
     networks:
       - frontend
       - backend
@@ -44,7 +43,7 @@ services:
       - 80:80
       - 443:443
     volumes:
-      - app:/var/www/app/wordpress
+      - app:/var/www/wordpress
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     networks:
       - frontend
