--- a/4.9/debian/test/nginx/default.conf
+++ b/4.9/debian/test/nginx/default.conf
@@ -7,7 +7,7 @@ server {
 	access_log   /var/log/nginx/access.log;
 	error_log    /var/log/nginx/error.log;
 
-	root /var/www/app/wordpress;
+	root /var/www/wordpress;
 
 	index index.php;
 	if (!-e $request_filename) {
