--- a/5.0/alpine/docker/etc/nginx/nginx.conf
+++ b/5.0/alpine/docker/etc/nginx/nginx.conf
@@ -1,5 +1,5 @@
 user www-data;
-pid /run/nginx/nginx.pid;
+pid /run/nginx.pid;
 worker_processes auto;
 worker_rlimit_nofile 1024;
 
@@ -37,9 +37,8 @@ http {
 	# www.wordpress
 	server {
 		listen 80;
-		listen [::]:80;
 
-		server_name _;
+		server_name localhost;
 		root /var/www/wordpress;
 
 		# index.php
@@ -47,7 +46,7 @@ http {
 
 		# index.php fallback
 		location / {
-			try_files $uri $uri/ /index.php?$query_string;
+			try_files $uri $uri/ /index.php?$args;
 		}
 
 		# handle .php
@@ -74,6 +73,7 @@ http {
 		}
 
 		# svg, fonts
+		
 		location ~* \.(?:svgz?|ttf|ttc|otf|eot|woff2?)$ {
 			add_header Access-Control-Allow-Origin "*";
 			expires 7d;
@@ -82,7 +82,7 @@ http {
 
 		# gzip
 		gzip on;
-    gzip_disable "msie6";
+    	gzip_disable "msie6";
 		gzip_vary on;
 		gzip_proxied any;
 		gzip_comp_level 6;
@@ -124,14 +124,4 @@ http {
 			include php_fastcgi.conf;
 		}
 	}
-
-	# non-www, subdomains redirect
-	#server {
-	#	listen 80;
-	#	listen [::]:80;
-
-  
-	#	server_name .wordpress;
-	#	return 301 https://www.wordpress$request_uri;
-	#}
 }
