--- a/5.0/alpine/docker/etc/nginx/php_fastcgi.conf
+++ b/5.0/alpine/docker/etc/nginx/php_fastcgi.conf
@@ -1,7 +1,7 @@
 try_files $uri =404;
 
 # fastcgi
-fastcgi_pass				unix:/run/php/php7.2-fpm.sock;
+fastcgi_pass				unix:/run/php7.2-fpm.sock;
 fastcgi_index				index.php;
 fastcgi_split_path_info		^(.+\.php)(/.+)$;
 fastcgi_param				SCRIPT_FILENAME $document_root$fastcgi_script_name;
@@ -13,4 +13,4 @@ fastcgi_busy_buffers_size		256k;
 fastcgi_temp_file_write_size	256k;
 
 # default fastcgi_params
-include php_fastcgi_params;
+include /etc/nginx/fastcgi_params;
