--- a/5.0/alpine/docker/etc/php7/php-fpm.d/zz-docker.conf
+++ b/5.0/alpine/docker/etc/php7/php-fpm.d/zz-docker.conf
@@ -4,9 +4,10 @@ daemonize = no
 error_log = /proc/self/fd/2
 
 [www]
-listen = /run/php/php7.2-fpm.sock
+listen = /run/php7.2-fpm.sock
 listen.owner = www-data
 listen.group = www-data
+listen.mode = 0660
 
 ; Unix user/group of processes
 user = www-data
