Fixed 'no database connection' when using wp-cli at boot'

--- a/5.0/alpine/Dockerfile
+++ b/5.0/alpine/Dockerfile
@@ -20,6 +20,7 @@ RUN set -ex; \
     apk --update add --no-cache \
     ca-certificates \
     curl \
+    mysql-client \
     nginx \
     shadow \
     ssmtp;
